Address CR comments.

--- a/media-source/index.html
+++ b/media-source/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel='stylesheet' href='../resources/testharness.css'>
+    <link rel='stylesheet' href='/resources/testharness.css'>
     <script>
       (function() {
       var testURLs = [];
