--- a/media-source/mediasource-buffered.html
+++ b/media-source/mediasource-buffered.html
@@ -4,7 +4,6 @@
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="mediasource-util.js"></script>
-        <link rel="stylesheet" href="/resources/testharness.css">
     </head>
     <body>
         <div id="log"></div>
@@ -15,12 +14,12 @@
             var manifestFilenameB = subType + "/test-v-128k-320x240-30fps-10kfr-manifest.json";
 
             var expectationsA = {
-              webm: "{ [0.000, 2.023) }",
+              webm: "{ [0.000, 2.022) }",
               mp4: "{ [0.000, 2.043) }",
             };
 
             var expectationsB = {
-              webm: "{ [0.000, 2.001) }",
+              webm: "{ [0.000, 2.000) }",
               mp4: "{ [0.000, 2.000) }",
             };
 
@@ -38,7 +37,7 @@
                         {
                             mediaSource.addSourceBuffer(typeA);
                             mediaSource.addSourceBuffer(typeB);
-                            assert_equals(mediaSource.activeSourceBuffers.length, 2);
+                            assert_equals(mediaSource.sourceBuffers.length, 2);
 
                             callback(test, mediaElement, mediaSource, dataA, dataB);
                         });
@@ -48,8 +47,8 @@
 
             function appendData(test, mediaSource, dataA, dataB, callback)
             {
-                var sourceBufferA = mediaSource.activeSourceBuffers[0];
-                var sourceBufferB = mediaSource.activeSourceBuffers[1];
+                var sourceBufferA = mediaSource.sourceBuffers[0];
+                var sourceBufferB = mediaSource.sourceBuffers[1];
 
                 test.expectEvent(sourceBufferA, "update");
                 test.expectEvent(sourceBufferA, "updateend");
@@ -98,7 +97,7 @@
                     test.waitForExpectedEvents(function()
                     {
                         var expectationsAV = {
-                            webm: ["{ [0.000, 2.004) }", "{ [0.000, 2.023) }"],
+                            webm: ["{ [0.000, 2.003) }", "{ [0.000, 2.022) }"],
                             mp4: ["{ [0.000, 2.000) }", "{ [0.000, 2.043) }"],
                         };
 
@@ -118,9 +117,12 @@
                 });
             }, "Muxed tracks with different lengths");
 
-
             mediaSourceDemuxedTest(function(test, mediaElement, mediaSource, dataA, dataB) {
-                appendData(test, mediaSource, dataA, dataB.subarray(0, 318), function()
+                var dataBSize = {
+                    webm: 318,
+                    mp4: 820,
+                };
+                appendData(test, mediaSource, dataA, dataB.subarray(0, dataBSize[subType]), function()
                 {
                     assertBufferedEquals(mediaSource.activeSourceBuffers[0], expectationsA[subType], "mediaSource.activeSourceBuffers[0]");
                     assertBufferedEquals(mediaSource.activeSourceBuffers[1], "{ }", "mediaSource.activeSourceBuffers[1]");
@@ -163,6 +165,7 @@
                     });
                 });
             }, "Muxed content empty buffered ranges.");
+
         </script>
     </body>
 </html>
