--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/support/popup-navigate.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/support/popup-navigate.html
@@ -3,7 +3,7 @@
 <head><title>popup (helper file)</title>
 <script>
     window.name = 'this_is_the_popup';
-    opener.postMessage(JSON.stringify({name: 'opener set correctly before navigation', pass: opener.name === 'this_is_the_opener'}), '*');
+    opener.postMessage({name: 'opener set correctly before navigation', pass: opener.name === 'this_is_the_opener'}, '*');
     setTimeout(function(){window.location.href = location.search.substr(1)}, 10);
 </script>
 </head>
