--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/window-opener-persistence-cross-origin-navigation.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/window-opener-persistence-cross-origin-navigation.html
@@ -9,7 +9,7 @@
   var t1 = async_test(document.title);
   var countdown = 2; // test expects two results, one before and one after navigation
   window.addEventListener('message', t1.step_func(function(e){
-    var data = JSON.parse(e.data);
+    var data = e.data;
     assert_true(data.pass, data.name);
     countdown--;
     if(countdown === 0)t1.done();
