--- a/html/browsers/the-window-object/security-window/support/popup-second-page.html
+++ b/html/browsers/the-window-object/security-window/support/popup-second-page.html
@@ -9,13 +9,16 @@ window.addEventListener('message', function (e) { console.log(e.source);
     if(e.data === 'poll for results'){
         var testidx = location.search.match(/idx=(\d+)/)[1];
         var name = decodeURIComponent(location.search.match(/name=([^&]+)/)[1]);
-        var stringifying_throws = false, stringified_opener = 'not tested';
+        var stringifying_throws = false, stringified_opener = 'not tested', is_self = 'not tested';
         try{
             stringified_opener = '' + window.opener;
         }catch(err){
             stringifying_throws = true;
         }
-        e.source.postMessage({name:name + ' - after navigation', stringifying_throws:stringifying_throws, stringified_opener:stringified_opener, step:'post-nav', idx:testidx}, '*')
+        try{
+            is_self = window.opener === self;
+        }catch(e){}
+        e.source.postMessage({name:name + ' - after navigation', stringifying_throws:stringifying_throws, stringified_opener:stringified_opener, is_self:is_self, step:'post-nav', idx:testidx}, '*')
     }
     setTimeout(function(){window.close();}, 50);
 }, false);
