Added necessary EventHandler typedef.

--- a/workers/interfaces.html
+++ b/workers/interfaces.html
@@ -84,6 +84,9 @@ WorkerNavigator implements NavigatorOnLine;
 interface WorkerLocation { };
 WorkerLocation implements URLUtilsReadOnly;
 
+[TreatNonCallableAsNull]
+callback EventHandlerNonNull = any (Event event);
+typedef EventHandlerNonNull? EventHandler;
 </script>
 <script>
 "use strict";
