Added MessagePort IDL stub to Workers IDL test.

--- a/workers/interfaces.html
+++ b/workers/interfaces.html
@@ -17,6 +17,7 @@ interface NavigatorID {};
 interface NavigatorLanguage {};
 interface NavigatorOnLine {};
 interface URLUtilsReadOnly {};
+interface MessagePort {};
 </script>
 <script type=text/plain>
 [Exposed=Worker]
